light/dark mode switch

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,3 +3,4 @@
 @import "./_layout.css";
 @import "./modules/_navigation.css";
 @import "../../node_modules/bootstrap/dist/css/bootstrap-grid.css";
+@import "./modules/_header.css";
