--- a/src/css/modules/_navigation.css
+++ b/src/css/modules/_navigation.css
@@ -1,7 +1,10 @@
-.nav-icon {
+.navigation-icon {
   height: 24px;
 }
 
 .navigation-hidden {
   display: none;
+}
+.navigation-top {
+  background-color: var(--color-bg);
 }
