--- a/src/css/_base.css
+++ b/src/css/_base.css
@@ -1,3 +1,21 @@
+html {
+  --color-bg: #eb9dc7;
+  --color-text-main: #515050;
+  --color-text-secondary: #000000;
+}
+html[data-theme="dark"] {
+  --color-bg: #352b99;
+  --color-text-main: #f7f6f6;
+  --color-text-secondary: #ffffff;
+}
+html[data-theme="light"] #light-mode-btn {
+  display: none;
+}
+
+html[data-theme="dark"] #dark-mode-btn {
+  display: none;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -11,4 +29,16 @@ a {
 img,
 video {
   display: block;
+}
+
+.row + .row {
+  margin-top: 16px;
+}
+
+.row > .col,
+.row > [class^="col-"] {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  background-color: rgba(86, 61, 124, 0.15);
+  border: 1px solid rgba(86, 61, 124, 0.2);
 }
