--- a/src/css/modules/_header.css
+++ b/src/css/modules/_header.css
@@ -1,5 +1,3 @@
 .header {
-  background-color: var(
-    --color-bg
-  ); /* au lieu de "background-color: #bcbfc3;" */
+  background-color: var(--color-bg);
 }
