--- a/src/css/modules/_header.css
+++ b/src/css/modules/_header.css
@@ -1,3 +1,10 @@
 .header {
   background-color: var(--color-bg);
 }
+
+.header-logo {
+  color: var(--color-text-secondary);
+  font-family: "Caesar Dressing";
+  font-size: 40px;
+  text-decoration: none;
+}
