--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,3 +7,5 @@
 @import "./modules/_daily-god.css";
 @import "./modules/_title.css";
 @import "./modules/_filters.css";
+@import "./modules/_article.css";
+@import "./modules/_footer.css";
