--- a/src/css/modules/_daily-god.css
+++ b/src/css/modules/_daily-god.css
@@ -40,6 +40,8 @@
 
 .daily-god-more {
   display: flex;
-  justify-content: space-between;
+
   align-items: center;
+  gap: 8px;
+  align-self: stretch;
 }
