--- a/src/css/_base.css
+++ b/src/css/_base.css
@@ -7,6 +7,7 @@ html {
   --color-yellow: #f8af27;
   --color-green: #12965d;
   --color-red: #f82727;
+  --color-white: #ffffff;
 }
 html[data-theme="dark"] {
   --color-bg: #bcbfc3;
@@ -52,7 +53,7 @@ main {
     width: auto;
   }
 }
-
+/*
 .row + .row {
   margin-top: 16px;
 }
