--- a/src/css/modules/_filters.css
+++ b/src/css/modules/_filters.css
@@ -3,8 +3,15 @@
   font-family: "Bubbler One";
   font-size: 24px;
 }
+.filters-second-title {
+  color: var(--color-white);
+  font-family: "Caesar Dressing";
+  font-size: 20px;
+  text-decoration: none;
+}
 
 .filters-spacing {
+  padding: 32px 0px 40px 0px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -17,6 +24,7 @@
   align-items: center;
   gap: 8px;
   align-self: stretch;
+  justify-content: space-between;
 }
 .filters-blue {
   border-radius: 8px;
