--- a/src/css/_base.css
+++ b/src/css/_base.css
@@ -35,6 +35,7 @@ a {
 img,
 video {
   display: block;
+  max-width: 305px;
 }
 
 h1 {
@@ -43,7 +44,6 @@ h1 {
   font-size: 32px;
 }
 main {
-  width: 393px;
   padding: 0 12px;
   gap: 20px;
 }
@@ -53,7 +53,7 @@ main {
     width: auto;
   }
 }
-/*
+
 .row + .row {
   margin-top: 16px;
 }
