--- a/src/css/modules/_footer.css
+++ b/src/css/modules/_footer.css
@@ -5,6 +5,7 @@ footer {
   align-items: flex-start;
   gap: 20px;
   background: var(--color-bg);
+  margin-top: 20px;
 }
 
 @media (min-width: 992px) {
