--- a/src/css/main.css
+++ b/src/css/main.css
@@ -9,3 +9,4 @@
 @import "./modules/_filters.css";
 @import "./modules/_article.css";
 @import "./modules/_footer.css";
+@import "./modules/_switch-mode.css";
