--- a/src/css/modules/_article.css
+++ b/src/css/modules/_article.css
@@ -7,6 +7,7 @@ article {
   border: 2px solid;
   background: var(--color-white);
   overflow: hidden;
+  margin-bottom: 20px;
 }
 .article-border-blue {
   border-color: var(--color-blue);
@@ -56,4 +57,5 @@ p {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  align-self: stretch;
 }
