--- a/src/css/modules/_navigation.css
+++ b/src/css/modules/_navigation.css
@@ -8,3 +8,14 @@
 .navigation-top {
   background-color: var(--color-bg);
 }
+
+.navigation-text {
+  color: var(--color-text-secondary, #000);
+  font-family: "Bubbler One";
+  font-size: 16px;
+  text-decoration: none;
+}
+
+.navigation-list {
+  list-style-type: none;
+}
