--- a/src/css/modules/_footer.css
+++ b/src/css/modules/_footer.css
@@ -13,3 +13,28 @@ footer {
     width: auto;
   }
 }
+
+.footer-spacing {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-top: 40.5px;
+  margin-bottom: 40.5px;
+}
+
+.footer-credits {
+  border-top: 1px solid var(--color-text-secondary);
+  display: flex;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  justify-content: center;
+  align-items: center;
+  align-self: stretch;
+  color: var(--color-text-secondary);
+  font-family: "Bubbler One";
+  font-size: 16px;
+}
+.footer-socials {
+  display: flex;
+  gap: 12px;
+}
