--- a/src/css/modules/_navigation.css
+++ b/src/css/modules/_navigation.css
@@ -12,10 +12,22 @@
 .navigation-text {
   color: var(--color-text-secondary, #000);
   font-family: "Bubbler One";
-  font-size: 16px;
+  font-size: 20px;
   text-decoration: none;
 }
 
 .navigation-list {
   list-style-type: none;
+}
+
+.navigation-spacing {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media (min-width: 992px) {
+  navigation-icon {
+    display: none;
+  }
 }
