--- a/src/css/modules/_switch-mode.css
+++ b/src/css/modules/_switch-mode.css
@@ -1,17 +1,34 @@
-.switch-mode-dark {
+.switch-mode-dark-btn {
   display: flex;
   width: 48px;
   align-items: center;
   border-radius: 4px;
-  border: 1px solid var(--color-text-secondary, #000);
-  background: var(--color-text-main, #515050);
+  border: 1px solid var(--color-text-secondary);
+  background: var(--color-text-main);
   padding: 8px 12px;
-  flex-direction: column;
   justify-content: center;
   gap: 10px;
+  margin-top: -10px;
 }
 
 .switch-mode-dark-icon {
   width: 24px;
   height: 24px;
+}
+.switch-mode-light-icon {
+  width: 24px;
+  height: 24px;
+}
+
+.switch-mode-light-btn {
+  display: flex;
+  width: 48px;
+  align-items: center;
+  border-radius: 4px;
+  border: 1px solid var(--color-text-secondary);
+  background: var(--color-text-main);
+  padding: 8px 12px;
+  justify-content: center;
+  gap: 10px;
+  margin-top: -10px;
 }
