--- a/src/css/_base.css
+++ b/src/css/_base.css
@@ -64,28 +64,21 @@ main {
   }
 }
 
-
-
 button {
   background: none;
   border: none;
 }
 
+button:hover {
+  transform: scale(0.85);
+}
+a:hover {
+  text-decoration: underline;
+}
+li:hover {
+  text-decoration: underline;
+}
+
 ul {
   gap: 16px;
-}
-
-
-
-/*
-.row + .row {
-  margin-top: 16px;
-}
-
-.row > .col,
-.row > [class^="col-"] {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  background-color: rgba(86, 61, 124, 0.15);
-  border: 1px solid rgba(86, 61, 124, 0.2);
 }
