--- a/src/css/modules/_navigation.css
+++ b/src/css/modules/_navigation.css
@@ -10,12 +10,15 @@
 }
 
 .navigation-text {
-  color: var(--color-text-secondary, #000);
+  color: var(--color-text-secondary);
   font-family: "Bubbler One";
   font-size: 20px;
   text-decoration: none;
+  margin-bottom: 20px;
 }
-
+.navigation-li {
+  margin-bottom: 10px;
+}
 .navigation-list {
   list-style-type: none;
 }
@@ -23,11 +26,28 @@
 .navigation-spacing {
   display: flex;
   align-items: center;
-  justify-content: center;
+  position: absolute;
+  top: 45px;
+  left: 0px;
+  right: 0;
+  background: var(--color-bg);
+  border-top: 1px solid var(--color-text-secondary);
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  padding-left: 20px;
+  padding-top: 20px;
 }
 
 @media (min-width: 992px) {
-  navigation-icon {
+  .navigation-icon {
     display: none;
+  }
+  .navigation-burger {
+    display: flex;
+  }
+  .navigation-spacing {
+    position: static;
+    background-color: transparent;
+    border: none;
+    box-shadow: none;
   }
 }
