--- a/src/css/modules/_switch-mode.css
+++ b/src/css/modules/_switch-mode.css
@@ -7,8 +7,7 @@
   background: var(--color-text-main);
   padding: 8px 12px;
   justify-content: center;
-  gap: 10px;
-  margin-top: -10px;
+  margin-bottom: 24px;
 }
 
 .switch-mode-dark-icon {
@@ -29,6 +28,5 @@
   background: var(--color-text-main);
   padding: 8px 12px;
   justify-content: center;
-  gap: 10px;
-  margin-top: -10px;
+  margin-bottom: 24px;
 }
