--- a/src/css/modules/_navigation.css
+++ b/src/css/modules/_navigation.css
@@ -1,8 +1,9 @@
 .navigation-icon {
   height: 24px;
+  margin-top: 10px;
 }
 
-.navigation-hidden {
+.navigation-spacing.navigation-hidden {
   display: none;
 }
 .navigation-top {
@@ -41,13 +42,14 @@
   .navigation-icon {
     display: none;
   }
-  .navigation-burger {
-    display: flex;
-  }
   .navigation-spacing {
     position: static;
     background-color: transparent;
     border: none;
     box-shadow: none;
+    display: flex;
+  }
+  .navigation-spacing.navigation-hidden {
+    display: flex !important;
   }
 }
